burger menu good need visuals - do not deploy -

--- a/interstate_sales/static/styles/theme.css
+++ b/interstate_sales/static/styles/theme.css
@@ -1,6 +1,10 @@
 
 /*Navigation menu
 ------------------------------------------*/
+.hidden {
+    display: none;
+}
+
 #nav,
 #nav ul {
 	list-style: none;
