--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -28,7 +28,7 @@
 
       <ul class="hidden" id="nav">
         <li id="home"><a href="{{request.route_url('home')}}">Home</a></li>
-        <li id="guardrail"><a href="{{request.route_url('guardrail')}}">Guardrail</a>
+        <li id="guardrail"><a>Guardrail</a>
           <ul class="subnav">
             {% for item in gr_subcats %}
               {% if '/guardrail' in request.path %}
