burger menu visuals paint - do not deploy -

--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -39,7 +39,7 @@
             {% endfor %}
           </ul>
         </li>
-        <li id="paint"><a href="{{request.route_url('paint')}}">Traffic Paint</a>
+        <li id="paint"><a>Traffic Paint</a>
           <ul class="subnav">
             {% for item in tr_subcats %}
               {% if '/paint' in request.path %}
