--- a/interstate_sales/static/styles/theme.css
+++ b/interstate_sales/static/styles/theme.css
@@ -11,10 +11,11 @@
 
 .subnav {
   margin-left: 11rem;
+  margin-top: -3rem;
 }
 
 #guardrail .subnav {
-  margin-top: -3rem;
+  /* margin-top: -3rem; */
 }
 
 #nav,
