burger menu visuals markings - do not deploy -

--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -50,7 +50,7 @@
             {% endfor %}
           </ul>
         </li>
-        <li id="markings"><a href="{{request.route_url('markings')}}">Pavement Markings</a>
+        <li id="markings"><a>Pavement Markings</a>
           <ul class="subnav">
             {% for item in pm_subcats %}
               {% if '/markings' in request.path %}
