burger menu visuals revamp jq - do not deploy -

--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -61,7 +61,7 @@
             {% endfor %}
           </ul>
         </li>
-        <li id="safety"><a href="{{request.route_url('safety')}}">Construction Safety</a>
+        <li id="safety"><a>Construction Safety</a>
           <ul class="subnav">
             {% for item in cs_subcats %}
               {% if '/safety' in request.path %}
