--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -109,17 +109,15 @@
         <li id="contact"><a href="{{request.route_url('contact')}}">Contact Us</a></li>
       </ul>
 
-    <!--
       <div id="search">
 
         <div>
           <form class="" action="search" method="post">
-            <input id="search_box" type="text" name="search" maxlength="25" value="">
+            <input id="search_box" type="text" name="search" maxlength="25" placeholder="Search">
             <input id="search_button" type="submit" value="Search"}>
           </form>
         </div>
       </div>
-    -->
 
       {% if auth %}
 
