telephone link added to contact - do not deploy -

--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -12,8 +12,8 @@
 <div id="white_space_contact_medium"></div>
 <div id="white_space_contact_large">
   <center><br>
-    <h3> Our Phone#:</h3>Toll-Free Phone#: 800-237-7245<br>
-    Phone#: (530)823-6070<br>
+    <h3> Our Phone#:</h3><a href="tel:8002377245">Toll-Free Phone#: 800-237-7245</a><br>
+    Phone#: <a href="tel:5308236070">(530)823-6070</a><br>
     Fax# : (530)823-0994</p>
   </center>
 </div>
