--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -38,7 +38,7 @@
           <div>
             <form class="" action="search" method="post">
               <input id="search_box" type="text" name="search" maxlength="25" placeholder="Search">
-              <input id="search_button" type="submit" value="Search"}>
+              <input id="search_button" type="image" name="submit" src="{{request.static_url('interstate_sales:static/images/search_icon.png')}}">
             </form>
           </div>
         </div>
