--- a/interstate_sales/static/styles/theme.css
+++ b/interstate_sales/static/styles/theme.css
@@ -1,3 +1,11 @@
+/* advo
+------------------------------------------*/
+.overlay {
+  height: 100%;
+  background-color: white;
+  position: absolute;
+  top: -156px;
+}
 
 /* Auth
 ------------------------------------------*/
@@ -271,6 +279,16 @@ input.reset {
   width:5em;
   padding:.1em;
 }
+
+/* .thumbnail:hover {
+  position:relative;
+  top:-25px;
+  left:-35px;
+  width:700px;
+  height:auto;
+  display:block;
+  z-index:999;
+} */
 
 /* input:focus, textarea:focus, input:hover, textarea:hover {
 	background:#C4DCF4;
