--- a/interstate_sales/templates/guardrail.jinja2
+++ b/interstate_sales/templates/guardrail.jinja2
@@ -26,7 +26,7 @@
               <center>
               {% for image in images %}
 
-                <img src="{{request.static_url('interstate_sales:static/images/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
+                <img class="thumbnail" src="{{request.static_url('interstate_sales:static/images/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
 
               {% endfor %}
               </center>
