--- a/interstate_sales/static/styles/theme.css
+++ b/interstate_sales/static/styles/theme.css
@@ -1,10 +1,38 @@
+a {
+  text-decoration: none;
+}
+
+p {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: -5px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* advo
 ------------------------------------------*/
 .overlay {
+  margin-top: 10rem;
+  padding-top: 7rem;
   height: 100%;
   background-color: white;
   position: absolute;
-  top: -156px;
+  top: -165px;
+}
+
+#logo {
+  color: inherit;
+}
+
+#logo h1 {
+  text-align: center;
+  font-size: -webkit-xxx-large;
+  margin-bottom: 3rem;
 }
 
 /* Auth
@@ -294,10 +322,6 @@ input.reset {
 	background:#C4DCF4;
 	outline:0;
 } */
-
-p {margin-left: 20px; margin-top: 20px; margin-right: 20px; margin-bottom: -5px; }
-
-* {margin: 0; padding: 0;}
 
 #wrap {
 	width: 980px;
