add download menu item

--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -138,6 +138,16 @@
             {% endfor %}
           </ul>
         </li>
+        
+        <li id="downloads"><a>Downloads</a>
+          <ul class="subnav">
+            <li>
+              <a href="https://drive.google.com/open?id=1_tbOGMSp1pZF1XVVs74LR4UtroU8hDl0">
+                Catalog
+              </a>
+            </li>
+          </ul>
+        </li>
 
         <li id="contact"><a href="{{request.route_url('contact')}}">Contact Us</a></li>
       </ul>
