--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -138,11 +138,11 @@
             {% endfor %}
           </ul>
         </li>
-        
+
         <li id="downloads"><a>Downloads</a>
           <ul class="subnav">
             <li>
-              <a href="https://drive.google.com/open?id=1_tbOGMSp1pZF1XVVs74LR4UtroU8hDl0">
+              <a href="https://drive.google.com/uc?id=1_tbOGMSp1pZF1XVVs74LR4UtroU8hDl0" target="_blank">
                 Catalog
               </a>
             </li>
