add julio - fix mailto

--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -32,7 +32,7 @@
 <div id="white_space_left"></div>
 <div id="email_form">
 
-  <form action="MAILTO:miket@interstatesales.com" method="post" enctype="text/plain">
+  <form action="MAILTO:mike@interstatesales.com" method="post" enctype="text/plain">
 
   <label for="name">Name</label>
   <input type="text" id="name" name="name">
